k8s/whispr/prod/moderation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
  namespace: whispr-prod
  labels:
    app: moderation-service
spec:
  type: NodePort
  selector:
    app: moderation-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30014
